# swig-python-cpp-demo

./: CMakeLists.txt  LICENSE  README.md  main.cpp
shape/: shape.cpp  shape.h  shape.i
